Finalizando modulo de niveis, estrutura do front e documentação
