# backend/storage/api-docs/api-docs.json
@@ -71,6 +71,33 @@
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    {
+                        "name": "hobby",
+                        "in": "query",
+                        "description": "Filtra pelo hobby do desenvolvedor",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "sexo",
+                        "in": "query",
+                        "description": "Filtra pelo sexo do desenvolvedor",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "nivel_id",
+                        "in": "query",
+                        "description": "Filtra pelo nivel do desenvolvedor",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
                     }
                 ],
                 "responses": {
